Fri Oct 11 15:22:29 2002  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: max_digits default to 12

	* src/funclib.c, src/mpwrap.[ch]: add random functions, and do
	  a bit of cleanup

Fri Oct 11 13:37:14 2002  George Lebl <jirka@5z.com>

	* src/calc.c, src/eval.c, src/parse.y, src/lexer.l,
	  src/parseutils.[ch], src/structs.h, compil.c: Add vararg functions

	* lib/linear_algebra/linear_algebra.gel: Add vector of matrices
	  direct sum function, and make the direct sum use varargs.
	  Also change is_invertible to IsInvertible and add
	  IsInvertibleField.  Also fix Jordan block function for n==1
	  and add some argument checking

	* lib/combinatorics/recursive_sequences.gel: use IsInvertible name

Fri Oct 11 12:02:19 2002  George Lebl <jirka@5z.com>

	* src/genius.c: fix a warning

	* src/eval.c, src/dict.[ch], src/calc.c: ensuring user body done
	  in a macro

	* src/eval.c: when we define a function within a non global context
	  immediately evaluate all local identifiers.  This allows for
	  returning of functions.  Also ensure user bodies on all treewalking
	  functions.

Fri Oct 11 10:56:59 2002  George Lebl <jirka@5z.com>

	* src/*.c, src/eval.h: put the free_trees extern in the header

	* src/matrixw.[ch], src/matrix.[ch], src/eval.c, src/parseutil.c,
	  src/funclib.c: Add RowsOf and ColumnsOf function which are useful
	  for the for/in loops (or sum/in or prod/in)

	* README: update a tad

Fri Oct 11 10:09:30 2002  George Lebl <jirka@5z.com>

	* src/eval.c: fix do/while/until loops

	* src/lexer.l, src/parse.y, src/eval.c, src/matrixw.[ch],
	  src/matop.[ch]: Make the ' operator the conjugate transpose
	  and add a simple transpose .' operator ala matlab/octave.  Also
	  only set matrix element to a NULL if it truly does equal 0 (integer
	  only)

	* src/eval.[ch], src/funclib.c: Add ExpandMatrix and conj functions.

	* lib/*/*.gel: update for transpose, added ConjugateTranspose
	  function

	* src/eval.c: fix matrix column expansion.
