@@ -1,3 +1,8 @@
+Fri Oct 11 16:45:36 2002  George Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c, src/geloutput.[ch], src/structs.h, src/calc.c:
+	  fix output of large things
+
 Fri Oct 11 15:22:29 2002  George Lebl <jirka@5z.com>
 
 	* src/genius.c, src/gnome-genius.c: max_digits default to 12
